<resources>
    <string name="app_name">Cookvert</string>
    <string name="action_change_category">Change Category</string>
    <string name="action_change_unit">Select unit</string>
    <string name="action_clear_lists">Clear ingredients</string>
    <string name="action_convert_recipe">Convert</string>
    <string name="action_convert_temperature">Convert temperature</string>
    <string name="action_delete_category">Delete Category</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_recipe">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_ingredient">Edit</string>
    <string name="action_edit_recipe_category">Rename category</string>
    <string name="action_edit_shop_item">Edit</string>
    <string name="action_edit_shop_list">Rename</string>
    <string name="action_load_recipe">Load Recipe</string>
    <string name="action_main_menu">Main Menu</string>
    <string name="action_new_category">New Category</string>
    <string name="action_new_recipe">New Recipe</string>
    <string name="action_new_shopping_list">New Shopping List</string>
    <string name="action_remove">Remove</string>
    <string name="action_rename">Rename</string>
    <string name="action_select_recipe">Select recipe</string>
    <string name="action_select_shop_item">Select</string>
    <string name="action_select_shop_list">Select</string>
    <string name="action_scale_recipe">Scale size</string>
    <string name="action_sign_in_not_now">Not now</string>
    <string name="action_sign_out">Sign out</string>
    <string name="all_ok">OK</string>
    <string name="all_done">Done</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_category">Category:</string>
    <string name="all_edit">Edit</string>
    <string name="all_delete">Delete</string>
    <string name="all_no_amount">No amount</string>
    <string name="all_no_name">No name</string>
    <string name="all_change_unit">Change unit</string>
    <string name="all_select_unit">SELECT UNIT</string>
    <string name="all_multiplier">Multiplier:</string>
    <string name="all_unit">Unit:</string>
    <string name="array_recipe_type_original">Use original ingredients</string>
    <string name="array_recipe_type_converted">Use converted ingredients</string>
    <string name="array_unit_celsius">Celsius</string>
    <string name="array_unit_cup_uk">cup (UK)</string>
    <string name="array_unit_cup_us">cup (US)</string>
    <string name="array_unit_deciliter">deciliter</string>
    <string name="array_unit_dessertspoon_eu">dessertspoon (metric)</string>
    <string name="array_unit_dessertspoon_uk">dessertspoon (UK)</string>
    <string name="array_unit_dessertspoon_us">dessertspoon (US)</string>
    <string name="array_unit_fahrenheit">Fahrenheit</string>
    <string name="array_unit_fluid_ounce_uk">fluid ounce (UK)</string>
    <string name="array_unit_fluid_ounce_us">fluid ounce (US)</string>
    <string name="array_unit_gallon_uk">gallon (UK)</string>
    <string name="array_unit_gallon_us_dry">gallon (US, dry)</string>
    <string name="array_unit_gallon_us">gallon (US, liquid)</string>
    <string name="array_unit_gram">gram</string>
    <string name="array_unit_kilogram">kilogram</string>
    <string name="array_unit_liter">liter</string>
    <string name="array_unit_milliliter">milliliter</string>
    <string name="array_unit_ounce">ounce</string>
    <string name="array_unit_piece">piece</string>
    <string name="array_unit_pint_uk">pint (UK)</string>
    <string name="array_unit_pint_us_dry">pint (US, dry)</string>
    <string name="array_unit_pint_us">pint (US, liquid)</string>
    <string name="array_unit_pound">pound</string>
    <string name="array_unit_quart_uk">quart (UK)</string>
    <string name="array_unit_quart_us_dry">quart (US, dry)</string>
    <string name="array_unit_quart_us">quart (US, liquid)</string>
    <string name="array_unit_tablespoon_eu">tablespoon (metric)</string>
    <string name="array_unit_tablespoon_uk">tablespoon (UK)</string>
    <string name="array_unit_tablespoon_us">tablespoon (US)</string>
    <string name="array_unit_teaspoon_eu">teaspoon (metric)</string>
    <string name="array_unit_teaspoon_uk">teaspoon (UK)</string>
    <string name="array_unit_teaspoon_us">teaspoon (US)</string>
    <string name="array_unit_short_name_cup_uk">cup (UK)</string>
    <string name="array_unit_short_name_cup_us">cup (US)</string>
    <string name="array_unit_short_name_deciliter">dl</string>
    <string name="array_unit_short_name_dessertspoon_eu">dsp (metric)</string>
    <string name="array_unit_short_name_dessertspoon_uk">dsp (UK)</string>
    <string name="array_unit_short_name_dessertspoon_us">dsp (US)</string>
    <string name="array_unit_short_name_fluid_ounce_uk">fl.oz (UK)</string>
    <string name="array_unit_short_name_fluid_ounce_us">fl.oz (US)</string>
    <string name="array_unit_short_name_gallon_uk">gal (UK)</string>
    <string name="array_unit_short_name_gallon_us_dry">gal (US, dry)</string>
    <string name="array_unit_short_name_gallon_us">gal (US, liquid)</string>
    <string name="array_unit_short_name_gram">g</string>
    <string name="array_unit_short_name_kilogram">kg</string>
    <string name="array_unit_short_name_liter">l</string>
    <string name="array_unit_short_name_milliliter">ml</string>
    <string name="array_unit_short_name_ounce">oz</string>
    <string name="array_unit_short_name_piece">pc</string>
    <string name="array_unit_short_name_pint_uk">pt (UK)</string>
    <string name="array_unit_short_name_pint_us_dry">pt (US, dry)</string>
    <string name="array_unit_short_name_pint_us">pt (US, liquid)</string>
    <string name="array_unit_short_name_pound">lb</string>
    <string name="array_unit_short_name_quart_uk">qt (UK)</string>
    <string name="array_unit_short_name_quart_us_dry">qt (US, dry)</string>
    <string name="array_unit_short_name_quart_us">qt (US, liquid)</string>
    <string name="array_unit_short_name_tablespoon_eu">tbs (metric)</string>
    <string name="array_unit_short_name_tablespoon_uk">tbs (UK)</string>
    <string name="array_unit_short_name_tablespoon_us">tbs (US)</string>
    <string name="array_unit_short_name_teaspoon_eu">tsp (metric)</string>
    <string name="array_unit_short_name_teaspoon_uk">tsp (UK)</string>
    <string name="array_unit_short_name_teaspoon_us">tsp (US)</string>
    <string name="drawer_open">DRAWER OPEN</string>
    <string name="drawer_close">DRAWER CLOSE</string>
    <string name="error_amount_too_large">Amount is too large</string>
    <string name="error_multiplier_max_accuracy">Max accuracy is x.xxx</string>
    <string name="error_multiplier_too_large">Multiplier is too large</string>
    <string name="error_no_amount">Amount is missing</string>
    <string name="error_no_multiplier">Multiplier is missing</string>
    <string name="error_no_name">Name is missing</string>
    <string name="error_unit_piece_converted">Piece can\'t be converted</string>
    <string name="help_about_content_1">Temperature icon was provided by Icons8 (https://icons8.com/icon/3907/temperature)</string>
    <string name="help_about_content_2">Other icons were provided by Google Material Design (https://material.io/icons/)</string>
    <string name="help_about_version">v.</string>
    <string name="help_convert_saved_recipe_title">How to convert units from a saved recipe</string>
    <string name="help_convert_saved_recipe_content_1.1">1.	Open the Cookvert app.</string>
    <string name="help_convert_saved_recipe_content_1.2">2. Tap the top left menu and select Recipes.</string>
    <string name="help_convert_saved_recipe_content_1.3">3.	Select the recipe you want to convert.</string>
    <string name="help_convert_saved_recipe_content_1.4">4.	Tap the top right menu and select Convert.</string>
    <string name="help_convert_saved_recipe_content_2">Convert view opens and the ingredients in your recipe are automatically added to each page. You can now convert ingredients by selecting target units in the Converted ingredients page.</string>
    <string name="help_convert_saved_recipe_content_3">Any changes made to recipe\'s ingredients in Convert view are not saved. To edit ingredients permanently, see \"How to save recipes\".</string>
    <string name="help_convert_saved_recipe_content_4part1_bold">Tips: </string>
    <string name="help_convert_saved_recipe_content_4part2">Once a recipe is loaded to Convert view, you will see a third page that shows you the instructions of the recipe. You can also load a recipe directly in Convert view by selecting Load recipe from top right menu. </string>
    <string name="help_convert_temperature_title">How to convert temperature</string>
    <string name="help_convert_temperature_content_1.1">1. Open the Cookvert app.</string>
    <string name="help_convert_temperature_content_1.2">2. Tap the top left menu and make sure Convert is selected.</string>
    <string name="help_convert_temperature_content_1.3">3. Tap the temperature icon in top right or select Convert temperature from top right menu.</string>
    <string name="help_convert_temperature_content_1.4">4. Enter the temperature amount and unit you want to convert.</string>
    <string name="help_convert_temperature_content_1.5">5. The text at the bottom shows you the converted temperature. The amount is automatically updated when you change the original amount or unit.</string>
    <string name="help_convert_units_title">How to convert units</string>
    <string name="help_convert_units_content_1.1">1. Open the Cookvert app.</string>
    <string name="help_convert_units_content_1.2">2. Tap the top left menu and make sure Convert is selected.</string>
    <string name="help_convert_units_content_2">After these steps you will see two pages:</string>
    <string name="help_convert_units_content_3part1_bold">Ingredients </string>
    <string name="help_convert_units_content_3part2">page shows you the list of ingredients you are converting.</string>
    <string name="help_convert_units_content_4part1_bold">Converted ingredients </string>
    <string name="help_convert_units_content_4part2">page shows you a similar list, which represents the ingredients after they are converted into other units. You can change pages by swiping the screen left and right, or tapping the tabs.</string>
    <string name="help_convert_units_content_5">To convert an ingredient:</string>
    <string name="help_convert_units_content_5.1">1. Add a new ingredient by tapping the bottom right button and entering amount, unit and name.</string>
    <string name="help_convert_units_content_5.2">2. Go to Converted ingredients page and tap the ingredient you just added.</string>
    <string name="help_convert_units_content_5.3">3. Select a target unit and tap DONE.</string>
    <string name="help_convert_units_content_6">Note that the amounts shown at the Converted ingredients page are also affected by current multiplier, that is located at the bottom of the view.</string>
    <string name="help_edit_items_title">How to edit and delete items in lists</string>
    <string name="help_edit_items_content_1">Editing and deleting list items works in the same way with recipes, recipe categories, ingredients, shopping lists and shop items.</string>
    <string name="help_edit_items_content_3">Note that deleting a recipe category will not remove the recipes it contains. Instead, all the recipes are relocated under the "Uncategorized" category. If you want to delete the recipes permanently, open the recipe list and follow the steps above.</string>
    <string name="title_activity_convert">Convert</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_shoplists">Shopping Lists</string>
    <string name="title_drawer_sign_in">Sign in</string>
</resources>